demo/demo01/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: "nginx" # use the one that corresponds to your ingress controller.
spec:
  rules:
  - host: demo01-ingress.yagr.xyz
    http:
      paths:
      - backend:
          serviceName: demo01
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo01
  annotations:
    external-dns.alpha.kubernetes.io/hostname: demo01-service.yagr.xyz
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: demo01

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo01
spec:
  selector:
    matchLabels:
      app: demo01
  template:
    metadata:
      labels:
        app: demo01
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
